# yapool

./: .gitignore  README.md
crates/yapool/: Cargo.toml
crates/yapool/src/: lib.rs  manager.rs  pool.rs  slots.rs
crates/yapool/src/pool/: config.rs  error.rs  object.rs
crates/yapool/src/slots/: error.rs  occupied_slots.rs  slot.rs
