[package]
name = "yapool"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"

[dependencies.tokio]
version = "1.44.1"
features = [
    "macros",
    "rt",
    "sync",
    "time",
]

[dev-dependencies]
googletest = "0.13.0"

[dev-dependencies.tokio]
version = "*"
features = [
    "rt-multi-thread",
]
